<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.gago</groupId>
    <artifactId>parent-template</artifactId>
    <name>parent-template</name>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>rest</module>
        <module>configuration</module>
        <module>frontend</module>
    </modules>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <java.version>11</java.version>
        <spring.boot.version>2.5.4</spring.boot.version>
        <maven.war.plugin.version>3.3.1</maven.war.plugin.version>
        <lombok.version>1.18.20</lombok.version>
        <postgres.version>42.2.23</postgres.version>
        <hibernate.version>5.4.32.Final</hibernate.version>
        <h2.version>1.4.200</h2.version>
        <keycloak.version>16.1.1</keycloak.version>
        <oauth.version>2.0.1.RELEASE</oauth.version>
        <jackson.version>2.12.0</jackson.version>
    </properties>

</project>